<resources>
    <string name="app_name">Blessure</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="add">Add</string>

    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>

    <string name="enter_systolic">Systolic pressure</string>
    <string name="enter_diastolic">Diastolic pressure</string>
    <string name="enter_datetime">Date &amp; Time</string>
    <string name="enter_user">Username</string>
    <string name="enter_password">Password</string>

    <string name="sys"><b>%1$d</b> SYS</string>
    <string name="dia"><b>%1$d</b> DIA</string>

    <string name="datetime">%1$s.%2$s.%3$d %4$s:%5$s</string>

    <string name="action_alarm">Reminder</string>
    <string name="action_list">List</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="dashboard_label">Dashboard</string>
    <string name="list_label">All Blood Pressures</string>
    <string name="alarm_label">Reminder</string>
    <string name="alarm_add_label">Add Reminder</string>
    <string name="add_label">Enter Blood Pressure</string>
    <string name="login_label">Login</string>
    <string name="settings_label">Settings</string>

    <string name="sys_label">SYS</string>
    <string name="dia_label">DIA</string>
    <string name="average_label">Average</string>
    <string name="minimum_label">Minimum</string>
    <string name="maximum_label">Maximum</string>

    <string name="dashboard_days">Days (considered in Dashboard):</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="login_failed">Login failed, please try again.</string>
    <string name="login_failed_invalid_user">Login failed, could not create user.</string>
    <string name="login_failed_server_failure">Login failed, could not reach server.</string>
</resources>