<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.xeflo.blessure.BlessureActivity">
    <item
        android:id="@+id/nav_list"
        android:orderInCategory="100"
        android:title="@string/action_list"
        android:icon="@drawable/ic_book_open"
        app:showAsAction="never"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/nav_alarm"
        android:orderInCategory="200"
        android:title="@string/action_alarm"
        android:icon="@drawable/ic_bell"
        app:showAsAction="never"
        android:menuCategory="secondary"/>
    <item
        android:id="@+id/nav_settings"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"
        android:menuCategory="secondary"/>


    <!-- item
        android:id="@+id/nav_logout"
        android:orderInCategory="300"
        android:title="@string/action_logout"
        app:showAsAction="never"
        android:menuCategory="secondary"/ -->
</menu>