<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_systolic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/colorLightGrey"
        app:cardCornerRadius="16dp">
        <EditText
            android:id="@+id/systolic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:ems="10"
            android:hint="@string/enter_systolic"
            android:inputType="number"
            android:background="@null"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_diastolic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_systolic"
        app:cardBackgroundColor="@color/colorLightGrey"
        app:cardCornerRadius="16dp">
        <EditText
            android:id="@+id/diastolic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:ems="10"
            android:hint="@string/enter_diastolic"
            android:inputType="number"
            android:background="@null"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_datetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_diastolic"
        app:cardBackgroundColor="@color/colorLightGrey"
        app:cardCornerRadius="16dp">
        <EditText
            android:id="@+id/datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:ems="10"
            android:hint="@string/enter_datetime"
            android:inputType="none"
            android:background="@null"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cancel"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:textSize="16sp"
        android:background="@color/colorLightGrey"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/save"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:background="@color/colorLightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>